--- a/common_core/push_swap/push_swap/Makefile
+++ b/common_core/push_swap/push_swap/Makefile
@@ -5,52 +5,70 @@
 #                                                     +:+ +:+         +:+      #
 #    By: josaraiv <josaraiv@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2024/11/21 14:18:56 by josaraiv          #+#    #+#              #
-#    Updated: 2024/11/22 10:59:11 by josaraiv         ###   ########.fr        #
+#    Created: 2025/03/10 11:17:51 by josaraiv          #+#    #+#              #
+#    Updated: 2025/03/13 12:16:54 by josaraiv         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-SRC = handle_errors.c \
-		init_a_to_b.c \
-		init_b_to_a.c \
-		push.c \
-		rev_rotate.c \
-		rotate.c \
-		sort_stacks.c \
-		sort_three.c \
-		split.c \
-		stack_init.c \
-		stack_utils.c \
-		swap.c \
-		push_swap.c \
 
-NAME = push_swap
+# Standard
+NAME				= push_swap
 
-CC = cc
-
-CFLAGS = -Wall -Wextra -Werror
-
-RM = rm -f
-
-CREATE = ar rcs
+# Directories
+INC					= inc/
+SRC_DIR				= srcs/
 OBJ_DIR				= obj/
-OBJ = $(SRC:.c=.o)
+
+# Compiler and CFlags
+CC					= gcc
+CFLAGS				= -Wall -Werror -Wextra -I
+RM					= rm -f
+
+# Source Files
+COMMANDS_DIR		=	$(SRC_DIR)commands/push.c \
+						$(SRC_DIR)commands/rev_rotate.c \
+						$(SRC_DIR)commands/rotate.c \
+						$(SRC_DIR)commands/sort_stacks.c \
+						$(SRC_DIR)commands/sort_three.c \
+						$(SRC_DIR)commands/swap.c
+
+PUSH_SWAP_DIR		=	$(SRC_DIR)push_swap/handle_errors.c \
+						$(SRC_DIR)push_swap/init_a_to_b.c \
+						$(SRC_DIR)push_swap/init_b_to_a.c \
+						$(SRC_DIR)push_swap/push_swap.c \
+						$(SRC_DIR)push_swap/split.c \
+						$(SRC_DIR)push_swap/stack_init.c \
+						$(SRC_DIR)push_swap/stack_utils.c
+
+# Concatenate all source files
+SRCS 				= $(COMMANDS_DIR) $(PUSH_SWAP_DIR)
+
+# Apply the pattern substitution to each source file in SRC and produce a corresponding list of object files in the OBJ_DIR
+OBJ 				= $(patsubst $(SRC_DIR)%.c,$(OBJ_DIR)%.o,$(SRCS))
+
+# Build rules
+start:				
+					@make all
 
 
 
-all: $(NAME)
+all: 				$(NAME)
 
+$(NAME): 			$(OBJ) 
+					@$(CC) $(CFLAGS) $(INC) $(OBJ) -o $(NAME)
 
-
-$(NAME): $(OBJ)
-		@$(CC) $(CFLAGS) $(OBJ) -o $(NAME)
+# Compile object files from source files
+$(OBJ_DIR)%.o:		$(SRC_DIR)%.c 
+					@mkdir -p $(@D)
+					@$(CC) $(CFLAGS) $(INC) -c $< -o $@
 
 clean:
-		@$(RM) $(OBJ)
+					@$(RM) -r $(OBJ_DIR)
 
-fclean: clean
-		@$(RM) $(NAME)
+fclean: 			clean
+					@$(RM) $(NAME)
 
-re: fclean all
+re: 				fclean all
 
-.PHONY: all clean fclean re
+# Phony targets represent actions not files
+.PHONY: 			start all clean fclean re
